# ygg-rss-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-develop.yml  docker-release.yml
ygg_rss_proxy/: __init__.py  app.py  auth.py  logging_config.py  proxy.py  rss.py  run_gunicorn.py  session_manager.py  settings.py  torrent.py  version.py
ygg_rss_proxy/fspy/: __init__.py  response_models.py  solver.py  solver_exceptions.py
